--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         "phpunit/phpunit": "3.7.x-dev"
     },
     "autoload": {
-        "psr-0": {"CubicMushroom\FileHandlers": "src/CubicMushroom/"}
+        "psr-0": {"CubicMushroom\\FileHandlers": "src/CubicMushroom/"}
     }
 }
